--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -7,15 +7,11 @@ DRUGS
 - crack
 - LSD (blot paper)
 - inhalant (insecticide)
+- steroids
 
 PROPS
-- mouse trap
 - ironing board
-- pile of clothes (3)
 - pile of trash (3)
-- drawer
-- bong
-- pillow and bedsheet
 - computer
 - credit card
 - tv remote
