--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -3,7 +3,7 @@ DRUGS
 - weed (cookies)
 - lean (grimace)
 - alcohol (rotgut)
-- DMT
+- DMT (DMT)
 - crack
 - LSD (blot paper)
 - inhalant (insecticide)
@@ -12,6 +12,4 @@ DRUGS
 PROPS
 - ironing board
 - pile of trash (3)
-- computer
 - credit card
-- tv remote
