Ironing board, buddha and kitchen mat models

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -10,4 +10,8 @@ DRUGS
 - steroids
 
 PROPS
-- ironing board
+- clothes iron
+- clothes rack w/ several black t-shirts
+- prayer candles
+- simple shelf for above radiator --
+- lightbulb fixture
