Shelf model and window hole in apartment wall

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -7,9 +7,17 @@ DRUGS
 - crack
 - LSD (blot paper)
 - inhalant (insecticide)
-- steroids
+- steroids (juice)
 
 PROPS
+
+Living Room:
+- deer head
+- dish soap
+- graffiti
+- shelf under fish tank
+
+Bedroom:
 - clothes iron
 - clothes rack w/ several black t-shirts
 - prayer candles
