Misc bedroom props

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -15,6 +15,9 @@ Living Room:
 
 Bedroom:
 - clothes iron
-- clothes rack w/ several black t-shirts
 - prayer candles
+- old wooden chair
+- box of tissues
+- crappy light fixture
+- porn magazine
 
