Tissue box model

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -4,7 +4,7 @@ DRUGS
 - lean (grimace)
 - alcohol (rotgut)
 - DMT (DMT)
-- crack
+- crack (rocks)
 - LSD (blot paper)
 - inhalant (insecticide)
 - steroids (juice)
@@ -16,6 +16,5 @@ Living Room:
 Bedroom:
 - clothes iron
 - prayer candles
-- box of tissues
 - porn magazine
 
