Janitor closet room placeholder

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -11,8 +11,13 @@ DRUGS
 
 PROPS
 
-Living Room:
-
-Bedroom:
-- clothes iron
+Janitor Closet
+- commercial vacuum
+- storage shelf
+- mop and bucket
+- janitorial sink
+- push broom
+- wipes
+- towels
+- dustpan
 
