i forgot what i changed but dont wanna erase something potentially important so i'm committing anyways

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -12,12 +12,5 @@ DRUGS
 PROPS
 
 Janitor Closet
-- commercial vacuum
-- storage shelf
-- mop and bucket
-- janitorial sink
-- push broom
-- wipes
-- towels
-- dustpan
-
+- Drainage Mat
+- Rack 
