Light prefab for muzzle flash

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -10,4 +10,16 @@ DRUGS
 - steroids (juice)
 
 PROPS
-- Pistol (Three Piece)
+- flourescent light
+
+VET APARTMENT
+- serial killer bulletin board
+- pages billboards
+- workbench
+- gun rack
+- manifesto
+- whiteboard
+- old refrigerator
+- chesmitry tables
+- laptop on image board
+- bookshelves
