--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -16,5 +16,7 @@ VET APARTMENT
 - manifesto
 - whiteboard
 - old refrigerator
-- chesmitry tables
-- bookshelves
+- piss bottles
+- cork board
+- molotov ingredients
+- blueprint on wall
