Refactored door opening script

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -11,6 +11,6 @@ DRUGS
 
 
 VET APARTMENT
-- whiteboard
-- cork board
-- molotov ingredients
+- Lil Brutus pizza box
+- ammo boxes
+- military photos
