Melee attack logic
Just requires an actual weapon to test with now.

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -10,10 +10,13 @@ DRUGS
 - steroids (juice)
 
 
-VET APARTMENT
-- wooden nickel
-- cult pamphlet
-- tapeworm
+ITEMS
+- cult pamphlet (foreshadowing and literature)
+- baboon heart
+- coupon (currency)
+- credit card (currency)
+- steroids (allows player to punch open locked doors)
+- crowbar (can break open busted doors)
 
 CRIP APARTMENT
 HOSTAGE ROOM
