Torture room asset list

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -14,5 +14,16 @@ ITEMS
 - cult pamphlet (foreshadowing and literature)
 - coupon (currency)
 
-CRIP APARTMENT
-HOSTAGE ROOM
+TORTURE ROOM
+
+- bloody lead pipe
+- pig head
+- corpse in chair
+- piss puddle
+- floor bloodstained 
+- severed hand
+- bag of chips
+- soda bottles
+- energy drink
+- boombox
+- "Tha Hangman" CD
