Bear trap model

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -12,10 +12,11 @@ DRUGS
 
 ITEMS
 - cult pamphlet (foreshadowing and literature)
+- "Tha Hangman" casette tape
 
-TORTURE ROOM
+PLAYER'S APARTMENT --
+JANITOR'S CLOSET -- 
+VETERAN'S APARTMENT --
+TORTURE ROOM --
 
-- bear trap
-- soda bottles
-- boombox
-- "Tha Hangman" CD
+CULT ALTAR
