Altar art and initial carpet design

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -19,3 +19,11 @@ VETERAN'S APARTMENT --
 TORTURE ROOM --
 
 CULT ALTAR
+- prayer candles
+- buddha statues (x3)
+- flower petals on floor
+- panel board with cult leader
+- small shelf with cult reading material
+- full carpet designs
+- potted flowers
+- small waterfall prop
