Cult literature models

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -19,7 +19,6 @@ VETERAN'S APARTMENT --
 TORTURE ROOM --
 
 CULT ALTAR
-- panel board with cult leader
-- small shelf with cult reading material
 - potted flowers
 - small waterfall prop
+- lanterns
