Cultist model animation test

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -12,12 +12,12 @@ DRUGS
 
 ITEMS
 - "Tha Hangman" casette tape
+- small fake waterfall
 
 PLAYER'S APARTMENT --
 JANITOR'S CLOSET -- 
 VETERAN'S APARTMENT --
 TORTURE ROOM --
+CULT ALTAR --
 
-CULT ALTAR
-- small waterfall prop
 
