More neon heart lights

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -20,4 +20,12 @@ VETERAN'S APARTMENT --
 TORTURE ROOM --
 CULT ALTAR --
 
+SADOMASO ROOM
+- mr. lust's cage
+- romantic candles
+- bondage cross
+- sex swing
+- heart shaped box of chocolates
+- rack of bondage tools
+
 
