Mr Lust with idle animation placed in cage

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -22,7 +22,12 @@ CULT ALTAR --
 
 SADOMASO ROOM
 - romantic candles
-- sex swing
 - rack of bondage tools
+	- whip
+	- handcuffs
+	- paddle
+	- flogger
+	- bondage rope
+	- gag
 
 
