--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -21,13 +21,5 @@ TORTURE ROOM --
 CULT ALTAR --
 
 SADOMASO ROOM
-- romantic candles
-- rack of bondage tools
-	- whip
-	- handcuffs
-	- paddle
-	- flogger
-	- bondage rope
-	- gag
-
+- medieval candlestick
 
