Codeine model and texture

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -19,7 +19,13 @@ JANITOR'S CLOSET --
 VETERAN'S APARTMENT --
 TORTURE ROOM --
 CULT ALTAR --
+SADOMASO ROOM--
 
-SADOMASO ROOM
-- medieval candlestick
+EASTER EGGS
 
+- "Lay graffiti"
+- Super "Lean"
+- Exit Mask
+- "by J. Casselman"
+- gaby the gimp lmao its not even that farfetched
+- Liam the Domestic Terrorist
