Foyer textured and stairwell wall replaced

--- a/cookies/Assets/todo.txt
+++ b/cookies/Assets/todo.txt
@@ -1,25 +1,23 @@
-DRUGS
+Son of Sal
+- fix salvador interaction functionality
 
-- weed (cookies)
-- lean (grimace)
-- alcohol (rotgut)
-- DMT (DMT)
-- crack (rocks)
-- LSD (blot paper)
-- inhalant (insecticide)
-- steroids (juice)
+Heavens Front Porch
+- fix huxley interaction functionality
 
+The Final Circus
+- logic for gun that can only kill clown
 
-ITEMS
+A Floridian Film
+- Billy the Nazi AI logic
+- Interaction for delivering crack
 
-PLAYER'S APARTMENT --
-JANITOR'S CLOSET -- 
-VETERAN'S APARTMENT --
-TORTURE ROOM --
-CULT ALTAR --
-SADOMASO ROOM--
+Black October
+- interaction for soviet door
+- collision logic for crawling roaches
+- script for TV reporter in holding cell
 
-EASTER EGGS
-
-- "Lay graffiti"
-- "by J. Casselman"
+Crown Fried
+- Louis Ray fight logic
+- fast food worker dialogue
+- eddie dialogue
+- lock for chainsaw
